tests/paczka1/small_fuzzy/76379965.err
Error in line 4: lIWfu42kg A98 28,2
Error in line 11: lIWfu42kg A802 -1,0
Error in line 14: vJBuss A98 12,69
Error in line 12: vJBuss A712 43,7
